--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -52,35 +52,6 @@
 										</span>
 									</div>
 								</div>
-               
-                <!-- <div class="col-auto">
-									<label class="form-label">Standard Year/Month:  </label>
-									<div class="input-icon">
-										<input type="month" class="form-control  select-date p-1 " placeholder="Select a date" id="datepicker-icon" value="2020-06-20" style="padding: 3px" /> <span class="input-icon-addon">  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                          <path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
-                          <path d="M16 3v4" />
-                          <path d="M8 3v4" />
-                          <path d="M4 11h16" />
-                          <path d="M11 15h1" />
-                          <path d="M12 15v3" /></svg>
-										</span>
-									</div>
-								</div>
-								<div class="col-auto">
-									<label class="form-label"> &nbsp;</label>
-									<div class="input-icon">
-										<input type="month" class="form-control select-date p-1 " placeholder="Select a date" id="datepicker-icon" value="2020-06-25" style="padding: 3px" /> <span class="input-icon-addon"> <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                          <path d="M4 7a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12z" />
-                          <path d="M16 3v4" />
-                          <path d="M8 3v4" />
-                          <path d="M4 11h16" />
-                          <path d="M11 15h1" />
-                          <path d="M12 15v3" /></svg>
-										</span>
-									</div>
-								</div> -->
                  <!-- Month Select -->
                  <div class="col-auto">
                   <label class="form-label">Standard Year/Month: </label>
@@ -94,27 +65,6 @@
                     placeholder="00/0000"
                     autocomplete="off"
                   />
-                  <!-- <label class="form-label">Standard Year/Month: </label>
-                  <select
-                    name="user[month]"
-                    class="form-select select-month-year p-1"
-                    id="inputMonth"
-                  >
-                    <option selected value="">- Month -</option>
-                   
-                    <option value="1">January</option>
-                    <option value="2">February</option>
-                    <option value="3">March</option>
-                    <option value="4">April</option>
-                    <option value="5">May</option>
-                    <option value="6">June</option>
-                    <option value="7">July</option>
-                    <option value="8">August</option>
-                    <option value="9">September</option>
-                    <option value="10">October</option>
-                    <option value="11">November</option>
-                    <option value="12">December</option>
-                  </select> -->
                 </div>
                 <div class="col-auto">
                   <div class="input-icon mt-4">
@@ -134,22 +84,6 @@
                     placeholder="00/0000"
                     autocomplete="off"
                   />
-                  <!-- <label class="form-label"> &nbsp; </label> -->
-                  <!-- <select
-                    name="user[year]"
-                    class="form-select select-month-year p-1"
-                    id="inputYear"
-                  >
-                    <option selected value="">- Year -</option>
-                    
-                    <option value="2020">2020</option>
-                    <option value="2021">2021</option>
-                    <option value="2022">2022</option>
-                    <option value="2023">2023</option>
-                    <option value="2024">2024</option>
-                    <option value="2025">2025</option>
-                    <option value="2026">2026</option>
-                  </select> -->
                 </div>
                 <div class="col"> 
                   <button
@@ -223,6 +157,7 @@
         }
       });
 
+     
       function getSearchList() {
         console.log("Sending AJAX request...");
 
@@ -232,10 +167,26 @@
           return date[1] + date[0];
         }
 
-        // saving the flipped date
-        const inputStartStdYm = flipDate($("#inpStartStdYm").val());
-        const inputEndStdYm = flipDate($("#inpEndStdYm").val());
+        function clearInputField(inputValue) {
+          let value  = inputValue.value;
+          let cleanedValue = value.replace(/[_\/\s]/g, '');
+          if(cleanedValue === "") {
+            inputValue.value = "";
+          } else if (inputValue.value !== "") {
+            // if the user enters a value,flip the date format to YYYYMM and reutrn the value
+            flipDate(inputValue.value);
+          }
+        }
 
+        let clearedinptStartYm =  clearInputField(document.getElementById('inpStartStdYm'));
+        let clearedinptEndYm =  clearInputField(document.getElementById('inpEndStdYm'));
+
+
+        console.log("inputStartStdYm after sending outside the loop", inputStartStdYm);
+        console.log("inputEndStdYm after sending", inputEndStdYm);
+
+        const inputStartLoadDate = $("#datepicker-icon").val().split("-").join("");
+        const inputEndLoadDate = $("#datepicker-icon-prepend").val().split("-").join("");
 
         $.ajax({
           type: "post",
@@ -245,10 +196,10 @@
           contentType: "application/json; charset=utf-8",
           data: JSON.stringify({
             uploadFile: $("#cmbUploadFileList").val(),
-            startLoadDate: $("#datepicker-icon").val(),
-            endLoadDate: $("#datepicker-icon-prepend").val(),
-            startStdYymm: inputStartStdYm,
-            endStdYymm: inputEndStdYm,
+            startLoadDate: inputStartLoadDate,
+            endLoadDate: inputEndLoadDate,
+            startStdYymm: clearedinptStartYm,
+            endStdYymm: clearedinptEndYm,
           }),
 
           success: function (data) {
