fix: minor fix in updating the option history table

--- a/src/main/resources/static/css/file-css.css
+++ b/src/main/resources/static/css/file-css.css
@@ -14,7 +14,7 @@ h2 {
 }
 .ptag-container {
   margin-top: -10px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 .ptag-container p {
   margin: 0;
