--- a/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
@@ -40,7 +40,7 @@
                             name="user[month]"
                             class="form-select select-month-year p-1"
                           >
-                            <option selected="selected" value="">Month</option>
+                            <option value="">Month</option>
                             <option value="1">January</option>
                             <option value="2">February</option>
                             <option value="3">March</option>
@@ -49,7 +49,9 @@
                             <option value="6">June</option>
                             <option value="7">July</option>
                             <option value="8">August</option>
-                            <option value="9">September</option>
+                            <option selected="selected" value="9">
+                              September
+                            </option>
                             <option value="10">October</option>
                             <option value="11">November</option>
                             <option value="12">December</option>
