--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,7 +26,7 @@
 			<div class="collapse navbar-collapse" id="navbar-menu">
 				<span class="link-light">Welcome! You must be</span>&nbsp;&nbsp;
 				<span class="link-light"><b>User Name</b></span>&nbsp;&nbsp;
-				<span class="link-light">work at</span>&nbsp;&nbsp;
+				<span class="link-light">works at</span>&nbsp;&nbsp;
 				<span class="link-light"><b>Company Name</b></span>
 				<span class="link-light">, currently using</span>&nbsp;&nbsp;
 				<span class="link-light"><b>Service Option Name</b></span>
