--- a/src/main/resources/templates/views/user/newCompany.html
+++ b/src/main/resources/templates/views/user/newCompany.html
@@ -32,7 +32,8 @@
 
     			<div class="text-center mb-2">
 					<span class="navbar-brand">
-						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-alert-circle"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M12 8v4" /><path d="M12 16h.01" /></svg>						You are probably a person who will have responsibilities for managing these services and users on behalf of your company.</span>
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-alert-circle"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M12 8v4" /><path d="M12 16h.01" /></svg>
+						You might be a person responsible for managing these services and users on behalf of your company.</span>
 				</div>
 
 			    <form class="card card-md" id="companyInfoForm" name="companyInfoForm" method="post" action="/auth/adamsNewCs" autocomplete="off" onsubmit="return false;">
