--- a/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
+++ b/src/main/resources/templates/views/adm/srv/ADMSRV002M0.html
@@ -447,7 +447,7 @@
             const searchButton = document.getElementById("searchButton");
             searchButton.addEventListener("click", searchFunction);
 
-            // write me a fetch method to get the subscription list
+            // Function to fetch the subscription list
             function fetchSubscriptionList() {
               $.ajax({
                 type: "GET",
