--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -153,6 +153,7 @@
             </div>
             <!-- rest of content -->
           </div>
+          <div style="padding-bottom: 10px"></div>
           <div style="padding-top: 1em">
             <form name="divData">
               <!-- <p>►&nbsp;<label for="lblGrdTitle">Grid title: </label></p> -->
