--- a/src/main/resources/static/css/common-css.css
+++ b/src/main/resources/static/css/common-css.css
@@ -62,6 +62,8 @@ a.nav-link.active {
   outline: 0;
   /* height: 200px; */
   width: 100%;
+  /* height: 00px; */
+  height: 200px;
   overflow-y: scroll;
 }
 
