WRKBAT002: 체크박스 및 실행버튼 추가(백엔드개발 포함)

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -50,6 +50,8 @@
 		<script src="js/slickgrid/dist/browser/plugins/slick.rowselectionmodel.js"></script>
 		<script src="js/slickgrid/dist/browser/slick.compositeeditor.js"></script>
 		<script src="js/slickgrid/dist/browser/controls/slick.pager.js"></script>
+		<script src="js/slickgrid/dist/browser/plugins/slick.checkboxselectcolumn.js"></script>
+		<script src="js/slickgrid/dist/browser/controls/slick.columnpicker.js"></script>
 		<script src="js/xlsx.full.min.js"></script>
 		
 		<!-- <script src="js/js-tabler/demo-theme.min.js?1692870487"></script> -->
