--- a/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
+++ b/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
@@ -32,6 +32,7 @@
                     <select
                       name="user[month]"
                       class="form-select select-month-year p-1"
+                      id="inputMonth"
                     >
                       <option value="">Month</option>
                       <option value="1">January</option>
@@ -54,6 +55,7 @@
                     <select
                       name="user[year]"
                       class="form-select select-month-year p-1"
+                      id="inputYear"
                     >
                       <option value="">Year</option>
                       <option value="2020">2020</option>
@@ -69,8 +71,8 @@
                     <label class="form-label">Company Code / Name: </label>
                     <!-- <div class="input-group"> -->
                     <input
-                      id="inpSearchTxt"
-                      name="inpSearchTxt"
+                      id="companyCode"
+                      name="companyCode"
                       type="text"
                       class="form-control select-month-year p-1"
                       placeholder="insert value"
@@ -158,7 +160,7 @@
             var option = {
               id: "SelectList",
               type: "post",
-              url: "/WRKFIL001M0SelectList",
+              url: "/OPNSRV003M0getChartInfos",
               async: false,
               dataType: "json",
               contentType: "application/json; charset=utf-8",
@@ -389,13 +391,17 @@
             addSlickGridSomeStyling();
             // 그리드 초기화 및 데이터 로드
             console.log("Initializing SlickGrid...");
-            //  data = getFile(
-            //    (input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
-            getCsList(
-              (input = JSON.stringify({
-                searchTxt: $("#inpSearchTxt").val(),
-              }))
-            );
+    
+            // these will be used to get the month and year from the user
+            // const month = document.getElementById("inputMonth").value;
+            // const year = document.getElementById("inputYear").value;
+            // const stdYymm = year + month.padStart(2, "0");
+
+            // getCsList(
+            //   (input = JSON.stringify({
+            //     ymd: stdYymm,
+            //   }))
+            // );
           }
 
           function fn_callback(result) {
@@ -421,6 +427,7 @@
             }
           }
           function fn_setGrid(data) {
+            console.log("sucessfully fetched data : ", data);
             console.log("fn_setGrid data : ", data);
             dataView = new Slick.Data.DataView();
             grid = new Slick.Grid(
@@ -698,32 +705,26 @@
             }
             // search function to make a fetch call to the server
             function searchFunction() {
-              // Get the selected month and year values
-              var month = $('select[name="user[month]"]').val();
-              var year = $('select[name="user[year]"]').val();
-
-              // Validate that both month and year are selected
-              if (!month || !year) {
-                alert("Please select both month and year.");
-                return;
-              }
-
-              // Pad the month with a leading zero if necessary
-              if (month.length === 1) {
-                month = "0" + month;
-              }
+        
+               // these will be used to get the month and year from the user
+              const month = document.getElementById("inputMonth").value;
+              const year = document.getElementById("inputYear").value;
+              const conpanyCode = document.getElementById("companyCode").value;
+              const stdYymm = year + month.padStart(2, "0");
 
               // Send an AJAX GET request to the endpoint
               $.ajax({
-                type: "GET",
-                url: "/ADMSRV002M0GetUserDataAndCost",
-                data: {
-                  month: month,
-                  year: year,
-                },
+                type: "POST",
+                url: "/OPNSRV003M0getChartInfos",
+                data: JSON.stringify({
+                  ymd: stdYymm
+                
+                }),
+                contentType: "application/json; charset=utf-8",
+                async: true,
                 dataType: "json",
                 success: function (data) {
-                  console.log("Data received:", data);
+                  console.log("Data received from the single ajax form:", data);
                   // we handle the data here
                   // update the chart wwth the data
                   updateChart(data);
@@ -775,78 +776,9 @@
             const searchButton = document.getElementById("searchButton");
             searchButton.addEventListener("click", searchFunction);
 
-            // write me a fetch method to get the subscription list
-            function fetchSubscriptionList() {
-              $.ajax({
-                type: "GET",
-                url: "/selectSubscriptionList",
-                async: true,
-                dataType: "json",
-                success: function (data) {
-                  // $("#userNumber").text(data[0].optDtlsCd + " users");
-                  // $("#userNumber").css("font-weight", "bold");
-                  // console.log("Subscription list fetched successfully:", data);
-                  // // update the ui based on the user subscription
-                  // if (data[0].srvcCd === "01") {
-                  //   $("#serviceChange").text("Basic Service");
-                  // } else {
-                  //   $("#serviceChange").text("Premium Service");
-                  // }
-                },
-                error: function (xhr, status, error) {
-                  console.error(
-                    "Error fetching subscription list:",
-                    status,
-                    error
-                  );
-                },
-              });
-            }
-
-            // Function to fetch and display the user's current subscription info
-            function getUserSubscriptionInfo() {
-              $.ajax({
-                type: "GET",
-                url: "/getUserSubscriptionInfo",
-                async: true,
-                dataType: "json",
-                success: function (data) {
-                  console.log("User subscription info:", data);
-                  // update the ui based on the user subscription
-                  if (data && data.length > 0) {
-                    var subscription = data[0]; // Assuming we hvae only one subscrition
-                    // Display the currently selected option data
-                    if (subscription.optDtlsCd) {
-                      $("#selectedOption").text(
-                        "+ " + subscription.optDtlsCd + " Users"
-                      );
-                      // we make the text bold
-                      $("#selectedOption").css("font-weight", "bold");
-                    }
-                  } else {
-                    // No subscription info found
-                    $("#basicSubscriptionButton")
-                      .text("Use")
-                      .prop("disabled", false);
-                    $("#premiumSubscriptionButton")
-                      .text("Use")
-                      .prop("disabled", false);
-                  }
-                },
-                error: function (xhr, status, error) {
-                  console.error(
-                    "Error fetching user subscription info:",
-                    status,
-                    error
-                  );
-                },
-              });
-            }
-
             $(document).ready(function () {
-              fetchSubscriptionList();
               // we fetch the user subcrioption info
-              getUserSubscriptionInfo();
+              // getUserSubscriptionInfo();
               searchFunction();
             });
           });
