배치실행화면 관련 수정

--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -513,12 +513,11 @@ layout:decorate="~{layout/layout}"
 		document.getElementById("executeBatch").addEventListener("click", function () {
 			if (selectedPrograms.length > 0){
 				
-
 				console.log("selectedPrograms: ", selectedPrograms);
-				console.log("Stanard YYMM: ", stdYymm);
+				console.log("Stanard YYMM: ", getStdYymm());
 				selectedPrograms.forEach((row)=>{
 					const bPId = row.batProgId;
-					fn_execute_batch(bPId, stdYymm);
+					fn_execute_batch(bPId, getStdYymm());
 				})
 				
 				alert("Successfully Execution.")
