--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,7 +28,7 @@
 				<span class="link-light"><b>User Name</b></span>&nbsp;&nbsp;
 				<span class="link-light">works at</span>&nbsp;&nbsp;
 				<span class="link-light"><b>Company Name</b></span>
-				<span class="link-light">, currently using</span>&nbsp;&nbsp;
+				<span class="link-light">, currently subscribing to</span>&nbsp;&nbsp;
 				<span class="link-light"><b>Service Option Name</b></span>
 				<span class="link-light">.</span>
 			</div>
